Se termino el sidebar, habria que agregarle un fondo a la pagina aunque sea un color plano para que se logre ver bien esteticamente el sideBar

--- a/To-Do-List/src/index.css
+++ b/To-Do-List/src/index.css
@@ -17,4 +17,7 @@
     @apply bg-glass h-[98%] w-[20rem] rounded-3xl ml-6 p-4 
     border transition-all duration-500 border-solid border-glass relative
   }
+  .sidebar {
+    @apply flex items-center mt-2 p-4 rounded-lg cursor-pointer hover:bg-white transition-all duration-300
+  }
 }
