Se inicio la zona del board donde despues hay que agregar las listas, hay que conectar los botones del sidebar para que hagan lo que dicen hacer

--- a/To-Do-List/src/index.css
+++ b/To-Do-List/src/index.css
@@ -20,4 +20,8 @@
   .sidebar {
     @apply flex items-center mt-2 p-4 rounded-lg cursor-pointer hover:bg-white transition-all duration-300
   }
+  .board-container {
+    @apply bg-glass h-[98%] w-[92%] rounded-3xl ml-6 p-4 
+    border transition-all duration-500 border-solid border-glass relative
+  }
 }
