--- a/To-Do-List/src/index.css
+++ b/To-Do-List/src/index.css
@@ -22,6 +22,6 @@
   }
   .board-container {
     @apply bg-glass h-[98%] w-[92%] rounded-3xl ml-6 p-4 
-    border transition-all duration-500 border-solid border-glass relative
+    border transition-all duration-500 border-solid border-glass relative mr-5
   }
 }
